--- a/index.html
+++ b/index.html
@@ -1,80 +1,47 @@
 <!DOCTYPE html>
 <html lang="es">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Tienda Virtual Perú</title>
-    <script src="https://cdn.tailwindcss.com"></script>
-    <script>
-      tailwind.config = {
-        theme: {
-          extend: {
-            colors: {
-              gold: {
-                50: '#fbf9f3',
-                100: '#f5f0e1',
-                200: '#eadfb6',
-                300: '#dec686',
-                400: '#d3ad5b',
-                500: '#cd9f33', /* BASE: Dorado Metálico / Antique Gold */
-                600: '#b08128',
-                700: '#8d6323',
-                800: '#744f23',
-                900: '#634222',
-                950: '#39230f',
-              },
-              /* SECOND SUBTYPE: Sun Gold (Brighter, ceremonial yellow) */
-              sun: {
-                400: '#ffe14c',
-                500: '#ffd700',
-                600: '#e6c200',
-              },
-              bone: '#f4f1ea'
-            },
-            animation: {
-              'fade-in': 'fadeIn 0.5s ease-out',
-              'fade-in-up': 'fadeInUp 0.5s ease-out',
-            },
-            keyframes: {
-              fadeIn: {
-                '0%': { opacity: '0' },
-                '100%': { opacity: '1' },
-              },
-              fadeInUp: {
-                '0%': { opacity: '0', transform: 'translateY(20px)' },
-                '100%': { opacity: '1', transform: 'translateY(0)' },
-              }
-            }
-          }
-        }
-      }
-    </script>
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;700&display=swap" rel="stylesheet">
-    <style>
-      body {
-        font-family: 'Inter', sans-serif;
-      }
-      /* Custom scrollbar for webkit */
-      ::-webkit-scrollbar {
-        width: 8px;
-      }
-      ::-webkit-scrollbar-track {
-        background: #f4f1ea; /* Bone */
-      }
-      ::-webkit-scrollbar-thumb {
-        background: #cd9f33; /* Gold 500 */
-        border-radius: 4px;
-      }
-      ::-webkit-scrollbar-thumb:hover {
-        background: #b08128; /* Gold 600 */
-      }
-    </style>
+
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Allahu Akbar Shop</title>
+
+  <link
+    href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;700&family=Playfair+Display:wght@400;700&display=swap"
+    rel="stylesheet">
+  <style>
+    body {
+      font-family: 'Inter', sans-serif;
+    }
+
+    /* Custom scrollbar for webkit */
+    ::-webkit-scrollbar {
+      width: 8px;
+    }
+
+    ::-webkit-scrollbar-track {
+      background: #f4f1ea;
+      /* Bone */
+    }
+
+    ::-webkit-scrollbar-thumb {
+      background: #cd9f33;
+      /* Gold 500 */
+      border-radius: 4px;
+    }
+
+    ::-webkit-scrollbar-thumb:hover {
+      background: #b08128;
+      /* Gold 600 */
+    }
+  </style>
+  <!-- Note: Import maps below are only used for legacy/CDN fallback -->
+  <!-- In production build with Vite, these are bundled and not needed -->
   <script type="importmap">
 {
   "imports": {
     "react/": "https://esm.sh/react@^19.2.3/",
     "react": "https://esm.sh/react@^19.2.3",
-    "@google/genai": "https://esm.sh/@google/genai@^1.36.0",
     "react-dom/": "https://esm.sh/react-dom@^19.2.3/",
     "react-router-dom": "https://esm.sh/react-router-dom@^7.12.0",
     "recharts": "https://esm.sh/recharts@^3.6.0"
@@ -82,7 +49,10 @@
 }
 </script>
 </head>
-  <body class="bg-bone text-black">
-    <div id="root"></div>
-  </body>
+
+<body class="bg-bone text-black">
+  <div id="root"></div>
+  <script type="module" src="/index.tsx"></script>
+</body>
+
 </html>
